Fix page shift on search bar focus

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -213,7 +213,7 @@ img.thumbnail {
 }
 
 .searchbar input[type="search"]:focus {
-	margin: 0 0 0.5px 0;
+	margin: 0;
 	border: 2px solid;
 	border-color: rgba(0,0,0,0);
 	border-bottom-color: #FED;
